Reinstate parameter per entity for batch deletes using EclipseLink.
EclipseLink doesn't support WHERE e IN (:entities) and requires e = ?1 OR e = ?2 OR … style.

Closes #3983